@startuml
'https://plantuml.com/class-diagram

Bird <|-- Pigeon
Bird <|-- Penguin
Bird <|-- Parrot

abstract class Bird {
+String name
+String colour
{abstract}+void speak()
+void fly()
}

class Pigeon{
+void speak()
+void eatPizza()
}

class Penguin{
+void speak()
+void fly()
}

class Parrot{
+void speak()
}



@enduml
